snapshots/care/data4life/hc-util-sdk-kmp/error/1.13.0-SNAPSHOT/error-1.13.0-20220817.130540-1-all.jar.sha1
4b40d6427bb01ce18b8e8b7e35b603d840618de7